src/objects/StagingTableMapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Field_Name_API__c</fullName>
        <label>Object Field Name (API)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name_API__c</fullName>
        <label>Object Name (API)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staging_Object_Field_Name_API__c</fullName>
        <label>Staging Object Field Name (API)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staging_Object_Name_API__c</fullName>
        <label>Staging Object Name (API)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>StagingTableMapping</label>
    <pluralLabel>StagingTableMapping</pluralLabel>
</CustomObject>